--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,2 +1,219 @@
+* {
+  text-align: center; }
+
+.bg {
+  background-image: url("../img/background_fruit.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 900px; }
+
+/* Navegador */
+.img-logo {
+  width: 13%; }
+
+.menu {
+  color: #B52A03;
+  font-weight: bold; }
+
+/* Header */
+.cuadro-txt {
+  margin-top: 10%; }
+
+.txt-principal {
+  font-weight: bold;
+  font-size: 45px; }
+
+.mg-top {
+  margin-top: -2%; }
+
+.txt-frase {
+  margin: 4% 0;
+  font-size: 20px; }
+
+#btn {
+  background-color: #B52A03;
+  color: white;
+  border-radius: 15px;
+  padding-left: 50px;
+  padding-right: 50px; }
+
+/* Section */
+.div-pagina {
+  border-left: 80px solid transparent;
+  border-bottom: 260px solid #EDE2CE;
+  border-left-width: 1351px;
+  content: ' ';
+  position: relative;
+  z-index: 1;
+  top: 16%; }
+
+.bg-melon {
+  background-color: #EDE2CE; }
+
+.enmarcado {
+  background-color: white;
+  box-shadow: 5px 0px 10px 2px #C9C0B1;
+  padding: 1.5em;
+  padding-bottom: 40px;
+  position: absolute;
+  top: 84%;
+  z-index: 1;
+  left: 14%; }
+
+.titulo-section {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 20px 0px 0px;
+  color: black; }
+
+.subrayado-princ {
+  width: 0;
+  height: 0;
+  border-right: 100px solid transparent;
+  border-top: 5px solid #53A44A;
+  border-left: 100px solid transparent;
+  margin-left: 39%;
+  margin-bottom: 5%; }
+
+.img-circle {
+  border: 5px solid #53A44A;
+  border-radius: 50%;
+  width: 110px;
+  height: 110px; }
+
+.caract {
+  font-weight: bold;
+  text-align: left;
+  margin: 0;
+  color: black; }
+
+.subrayado {
+  border-left: 90px solid #53A44A;
+  border-bottom: 6px solid transparent; }
+
+.txt-posit {
+  text-align: left;
+  font-size: 14px; }
+
+/* Catalo de Frutas */
+/* Article */
+.div-pag {
+  border-left: 80px solid #ECE9E2;
+  border-top: 140px solid #EDE2CE;
+  border-left-width: 1351px;
+  content: ' ';
+  position: relative;
+  z-index: 1; }
+
+.gray {
+  background-color: #ECE9E2; }
+
+.mg-botton {
+  margin-bottom: 0; }
+
+.mg-frase {
+  margin-bottom: 4%; }
+
+#btn-green {
+  background-color: #53A44A;
+  color: white;
+  border-radius: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-bottom: 10%; }
+
+.img-fruit {
+  width: 100%;
+  height: 270px; }
+
+.img-fruit1 {
+  height: 180px;
+  background-image: url("../img/orange.jpg");
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.color-caja {
+  background-color: white; }
+
+.centrar-caja {
+  background-color: white;
+  width: auto;
+  margin-left: 20px; }
+
+.descr-produc {
+  font-size: 23px;
+  font-weight: bold;
+  text-align: left;
+  margin: 2px;
+  line-height: initial; }
+
+.cont-fruit {
+  text-align: left;
+  font-size: 15px; }
+
+.admin {
+  font-weight: bold; }
+
+.fecha {
+  margin-left: 20px; }
+
+/* Testimonio*/
+.bg-testimonio {
+  background-color: #53A44A; }
+
+.bg-form {
+  background-color: #53A44A;
+  width: 100%;
+  height: 400px; }
+
+.subrayado-princ-white {
+  width: 0;
+  height: 0;
+  border-right: 100px solid transparent;
+  border-top: 5px solid white;
+  border-left: 100px solid transparent;
+  margin-left: 39%;
+  margin-bottom: 3%; }
+
+.color-white {
+  color: white;
+  text-align: center;
+  margin-top: 5%; }
+
+.name {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+  line-height: initial; }
+
+#img-persona {
+  width: 200px;
+  border-radius: 50%;
+  margin-left: 40%;
+  margin-bottom: 4%; }
+
+.owl-nav {
+  display: none; }
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+  background: yellow;
+  width: 15px;
+  height: 15px; }
+
+/* Formulario*/
+/* Footer */
+.txt-footer {
+  font-weight: bold; }
+
+.txt-red {
+  color: #B52A03; }
+
+.brd-img {
+  box-shadow: 0px 1px 1px  0px black;
+  border: 1px solid gray; }
+
+.color-blue {
+  color: #074E68; }
 
 /*# sourceMappingURL=style.css.map */
