--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,12 +41,12 @@
 /* Section */
 .div-pagina {
   border-left: 80px solid transparent;
-  border-bottom: 260px solid #EDE2CE;
+  border-bottom: 140px solid #EDE2CE;
   border-left-width: 1351px;
   content: ' ';
   position: relative;
   z-index: 1;
-  top: 16%; }
+  top: 260px; }
 
 .bg-melon {
   background-color: #EDE2CE; }
@@ -59,7 +59,7 @@
   position: absolute;
   top: 84%;
   z-index: 1;
-  left: 14%; }
+  left: 12%; }
 
 .titulo-section {
   font-size: 30px;
@@ -202,6 +202,20 @@
   height: 15px; }
 
 /* Formulario*/
+.bg-formulario {
+  background-color: white;
+  width: 100%;
+  height: 275px; }
+
+.bg-input {
+  background-color: #FAE9D4 !important; }
+
+#btn-green-form {
+  background-color: #53A44A;
+  color: white;
+  border-radius: 15px;
+  margin: 10px; }
+
 /* Footer */
 .txt-footer {
   font-weight: bold; }
