--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-* {
+.txt-center {
   text-align: center; }
 
 .bg {
@@ -22,14 +22,16 @@
 
 .txt-principal {
   font-weight: bold;
-  font-size: 45px; }
+  font-size: 45px;
+  text-align: center; }
 
 .mg-top {
   margin-top: -2%; }
 
 .txt-frase {
   margin: 4% 0;
-  font-size: 20px; }
+  font-size: 20px;
+  text-align: center; }
 
 #btn {
   background-color: #B52A03;
@@ -65,7 +67,8 @@
   font-size: 30px;
   font-weight: bold;
   margin: 20px 0px 0px;
-  color: black; }
+  color: black;
+  text-align: center; }
 
 .subrayado-princ {
   width: 0;
@@ -113,7 +116,8 @@
   margin-bottom: 0; }
 
 .mg-frase {
-  margin-bottom: 4%; }
+  margin-bottom: 4%;
+  text-align: center; }
 
 #btn-green {
   background-color: #53A44A;
@@ -202,18 +206,27 @@
   height: 15px; }
 
 /* Formulario*/
+.titulo-section2 {
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 8%;
+  color: black;
+  text-align: center; }
+
 .bg-formulario {
   background-color: white;
   width: 100%;
-  height: 275px; }
+  height: 275px;
+  margin-bottom: 5%; }
 
 .bg-input {
-  background-color: #FAE9D4 !important; }
+  background-color: #FAE9D4 !important;
+  color: black !important; }
 
 #btn-green-form {
   background-color: #53A44A;
   color: white;
-  border-radius: 15px;
+  border-radius: 50px;
   margin: 10px; }
 
 /* Footer */
